# ServerSwitcher

./: .gitignore  Cargo.toml  README.md  build.rs
.idea_run/: Run debug.run.xml  Run release.run.xml
src/: backup.rs  error.rs  main.rs  products_searcher.rs  server_changer.rs  server_selection.rs  server_switcher.rs
