[package]
name = "server_switcher"
version = "0.0.4"
description = "Server switcher for ZennoLab products."
authors = ["Zymlex <www.zymlex.com>", "ZennoHelpers <github.com/ZennoHelpers>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-registry = "0.2"
quick-xml = "0.36.0"
url = "2.5.2"