[package]
name = "server_switcher"
version = "0.0.4"
description = "Server switcher for ZennoLab products."
authors = ["Zymlex <www.zymlex.com>", "ZennoHelpers <github.com/ZennoHelpers>"]
edition = "2021"
resolver = "2"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name="ServerSwitcher"
path="src/main.rs"

[dependencies]
windows-registry = "0.2"
quick-xml = "0.36.0"
url = "2.5.2"